sort.basic.shell.AlgShellSort.scala.error
Compilation error:
AlgShellSort:24: error: not found: value elementVal
        setValue(it-k*gap,elementVal)
                          ^